feat：新增根据用户ID获取用户信息接口
