# service/models/response/ucenter/UserBasicInfoResultBO.go
@@ -1,0 +1,8 @@
+package ucenter
+
+type UserBasicInfoResultBO struct {
+	Uid   string `json:"uid"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+	Phone string `json:"phone"`
+}
